Enhance CORS configuration and Security setup for improved handling
- Added a CorsFilter bean to ensure CORS headers are consistently applied, even with Spring Security.
- Updated CorsConfig to clarify header handling and improve logging for allowed headers.
- Modified SecurityConfig to ensure CORS configuration is prioritized and headers are set without conflicts, enhancing security compliance.